--- a/css/estilosProyecto.css
+++ b/css/estilosProyecto.css
@@ -1,9 +1,9 @@
 .Titulo {
   font-family: "Quicksand", sans-serif;
-  color: #ACE894;
+  color: #D68FD6;
   background-color: black;
   text-align: center;
-  font-size: 4rem;
+  font-size: 5rem;
   width: 100vw;
   font-weight: bold;
   padding: 15px;
@@ -11,52 +11,64 @@
   padding-top: 5%;
   margin: 0%; }
 
+.nav-link {
+  font-family: "Quicksand", sans-serif;
+  font-weight: bolder;
+  color: black; }
+  .nav-linka:visited {
+    background-color: #4A314D;
+    color: #ACE894; }
+  .nav-linka:active {
+    background-color: #4A314D;
+    color: #ACE894; }
+  .nav-linka:hover {
+    background-color: #4A314D;
+    color: #ACE894; }
+
+.active:visited {
+  background-color: #4A314D;
+  color: #ACE894; }
+
+.active:hover {
+  background-color: #4A314D;
+  color: #ACE894; }
+
+.col-sm-2 col-form-label {
+  color: #ACE894; }
+
+.col-form-label col-sm-2 pt-0 {
+  color: #ACE894; }
+
+body {
+  background-color: #ACE894; }
+
 .subTitulos {
   font-weight: bold;
   font-size: 24px;
   color: black; }
 
-.indicePrincipal ul {
-  list-style: none;
-  background-color: #ACE894;
-  display: flex;
-  list-style: none;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: stretch;
-  width: 100vw;
-  justify-content: space-evenly;
-  padding: 1% 8% 1% 8%;
-  margin: 0%;
-  text-decoration: none; }
-  .indicePrincipal ul li {
-    display: flex;
-    font-family: "Quicksand", sans-serif;
-    font-weight: bold;
-    font-size: 1rem;
-    width: 100vw;
-    text-decoration: none;
-    color: black;
-    background-color: #ACE894; }
-  .indicePrincipal ul li a {
-    text-decoration: none;
-    color: black;
-    transition: width 2s, height 2s, background-color 2s, transform 2s; }
-  .indicePrincipal ul li a:hover {
-    background-color: #4A314D;
-    color: #ACE894; }
-
 .parrafo {
-  background-color: #D68FD6;
+  background-color: black;
   padding-top: 5%;
+  width: 100%;
   padding-bottom: 10%;
   padding-right: 5%;
   padding-left: 5%;
   margin: 0%;
   font-family: "Quicksand", sans-serif;
   text-decoration: none;
-  font-size: 35px;
   text-align: center; }
+
+.texto {
+  color: #ACE894;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bolder;
+  font-size: 2rem; }
+
+.label {
+  color: #ACE894;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1rem; }
 
 img {
   object-fit: cover; }
@@ -66,7 +78,7 @@ img {
   text-align: center; }
 
 #indicePie {
-  background-color: #ACE894; }
+  background-color: #D68FD6; }
 
 #indicePie li {
   display: inline; }
@@ -74,7 +86,7 @@ img {
 #indicePie li a {
   color: black;
   text-align: center;
-  font-size: 25px;
+  font-size: 1rem;
   font-family: "Quicksand", sans-serif;
   font-weight: bold;
   list-style-position: inside;
@@ -93,46 +105,22 @@ img {
   color: #ACE894; }
 
 .piePagina {
-  background-color: #ACE894;
+  background-color: #D68FD6;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  width: 100%; }
-
-#menuPagina {
-  padding: 0%; }
-
-#menuPagina li {
-  list-style-type: none;
-  width: 120px;
-  display: inline; }
-
-#menuPagina li a {
-  text-decoration: none;
-  text-align: center;
-  color: black;
-  font-family: "Quicksand", sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 20px 120px 20px 74px;
-  transition: width 2s, height 2s, background-color 2s, transform 2s; }
-
-#menuPagina li a:hover {
-  background-color: #4A314D;
-  width: 200px;
-  height: 200px;
-  transform: rotate(180deg); }
+  width: 100vw; }
 
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1.1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 11px 14px;
-  grid-template-areas: "video-1- video-2 video-3" "video-4 video-5 video-6" "video-7 video-8 video-9"; }
+  grid-template-areas: "video-1 video-2 video-3" "video-4 video-5 video-6" "video-7 video-8 video-9"; }
 
-.video-1- {
-  grid-area: video-1-; }
+.video-1 {
+  grid-area: video-1; }
 
 .video-2 {
   grid-area: video-2; }
@@ -160,30 +148,42 @@ img {
 
 @media only screen and (max-width: 600px) {
   .Titulo {
-    width: 100vw;
-    font-size: 80px; }
+    width: 100%;
+    font-size: 3rem; }
+  .indicePrincipal ul li {
+    display: block;
+    width: 100%; }
+    .indicePrincipal ul li a {
+      font-size: 20px; }
+  .piePagina {
+    width: 100%; }
+  #indicePie {
+    width: 100%; }
+  #indicePie ul {
+    text-align: center;
+    justify-content: center; }
+    #indicePie ul li {
+      text-align: center;
+      justify-content: center; }
+    #indicePie ul a {
+      text-align: center;
+      justify-content: center; }
   .parrafo {
     font-size: 15px;
     width: 100%; }
+  .texto {
+    font-size: 1rem; }
   img {
     object-fit: cover; }
   .grid-container {
-    grid-template-areas: "video-1" "video-2" "video-3" "video-4" "video-5" "video-6" "video-7" "video-8" "video-9"; }
-  .video-1- {
-    grid-area: video-1-; }
-  .video-2 {
-    grid-area: video-2; }
-  .video-3 {
-    grid-area: video-3; }
-  .video-4 {
-    grid-area: video-4; }
-  .video-5 {
-    grid-area: video-5; }
-  .video-6 {
-    grid-area: video-6; }
-  .video-7 {
-    grid-area: video-7; }
-  .video-8 {
-    grid-area: video-8; }
-  .video-9 {
-    grid-area: video-9; } }
+    display: -ms-grid;
+    -ms-grid-columns: 1fr;
+    -ms-grid-rows: 1fr;
+    grid-template-areas: "video-1 video-1 video-1" "video-2 video-2 video-2" "video-3 video-3 video-3" "video-4 video-4 video-4" "video-5 video-5 video-5" "video-6 video-6 video-6" "video-7 video-7 video-7" "video-8 video-8 video-8" "video-9 video-9 video-9"; } }
+
+@media only screen and (max-width: 900px) {
+  .grid-container {
+    display: -ms-grid;
+    -ms-grid-columns: 1fr;
+    -ms-grid-rows: 1fr;
+    grid-template-areas: "video-1 video-1 video-1" "video-2 video-2 video-2" "video-3 video-3 video-3" "video-4 video-4 video-4" "video-5 video-5 video-5" "video-6 video-6 video-6" "video-7 video-7 video-7" "video-8 video-8 video-8" "video-9 video-9 video-9"; } }
